cluster/services/shlink/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-admin
  namespace: shlink
spec:
  type: ClusterIP
  ports:
    - name: admin-http
      port: 80
      targetPort: admin-http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: shlink
    app.kubernetes.io/name: shlink
