cluster/services/shlink/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: shlink
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`go.${DOMAIN_EXTERNAL}`) && Path(`/admin`)
      services:
        - kind: Service
          name: shlink-admin
          namespace: shlink
          port: 80
      middlewares:
        - name: auth-external
          namespace: traefik
        - name: security
          namespace: traefik
        - name: strip-prefix
          namespace: shlink
    - kind: Rule
      match: Host(`go.${DOMAIN_EXTERNAL}`)
      services:
        - kind: Service
          name: shlink
          namespace: shlink
          port: 8080
      middlewares:
        - name: auth-external
          namespace: traefik
        - name: security
          namespace: traefik
  tls:
    secretName: go.${DOMAIN_EXTERNAL}
